kubernetes-config/recipe-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-backend
  template:
    metadata:
      labels:
        app: recipe-backend
    spec:
      containers:
        - name: recipe-backend-container
          image: akashanand842/recipe-backend
          ports:
            - name: http
              containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-backend-service
spec:
  # type: LoadBalancer
  selector:
    app: recipe-backend
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
      # nodePort: 30001
