kubernetes-config/recipe-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-frontend-deployment

spec:
  selector:
    matchLabels:
      app: recipe-frontend
  template:
    metadata:
      labels:
        app: recipe-frontend
    spec:
      containers:
        - name: recipe-frontend
          image: sam1234gupta/spefinalfront
          ports:
            - containerPort: 2004


---
apiVersion: v1
kind: Service
metadata:
  name: recipe-frontend-service

spec:
  type: LoadBalancer
  selector:
    app: recipe-frontend
  ports:
    - name: http
      port: 2004
      targetPort: 2004
      nodePort: 30000
