kubernetes-config/recipe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-ingress
  labels:
    name: recipe-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: recipe-frontend-service
                port:
                  number: 2004
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: recipe-backend-service
                port:
                  number: 8082
